# myfriendrust

./: Cargo.toml  README.md  try.sh
src/: lib.rs
